--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -1,6 +1,9 @@
-@import url("../font/Kalam/stylesheet.css");
+/* @import url("../font/Kalam/stylesheet.css");
 @import url("../font/Nunito/stylesheet.css");
-@import url("../font/ThePretender-ExpSans/stylesheet.css");
+@import url("../font/ThePretender-ExpSans/stylesheet.css"); */
+@import url("../font/Kaluna-Script/stylesheet.css");
+@import url("../font/Times-New-Roman/stylesheet.css");
+
 .fixed-position {
     overflow: hidden;
 
@@ -10,7 +13,7 @@ body {
     margin: 0;
     padding: 0;
     -webkit-font-smoothing: antialiased;
-    font-family: "Nunito Sans 10pt";
+    font-family: 'Times New Roman Cyr';
 }
 
 /* ------------------
@@ -26,17 +29,16 @@ body {
 }
 
 h1,
-h2,
 h4,
 h5,
 h6 {
-    font-family: "ThePretender-ExpSansBoldPress";
+    font-family: 'Times New Roman Cyr';
 }
 
-h3 {
-    font-family: "Kalam";
+h2,h3 {
+    font-family: 'Kaluna Script DEMO';
     font-weight: bold;
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
 
 p {
@@ -101,10 +103,10 @@ ul {
 
 .tittle_heading h2 {
     color: #0b0708;
-    font-size: 36px;
+    font-size: 46px;
     font-weight: 900;
     line-height: 43px;
-    text-transform: uppercase;
+    text-transform: capitalize;
     margin-bottom: 0;
 }
 
@@ -112,7 +114,7 @@ ul {
     font-size: 16px;
     color: #eb0029;
     margin-bottom: 6px;
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
 
 .bg-style {
@@ -171,7 +173,7 @@ header.main_header {
 
 .social_icons ul li {
     display: inline-block;
-    margin-left: 6px;
+    margin: 0 4px;
 }
 
 .social_icons ul li a {
@@ -228,9 +230,9 @@ header.main_header {
 }
 
 .home-slider-content h3 {
-    font-size: 20px;
+    font-size: 40px;
     color: #fff;
-    letter-spacing: 4px;
+    /* letter-spacing: 4px; */
     margin-bottom: 6px;
 }
 
@@ -240,7 +242,7 @@ header.main_header {
 .home-slider-content h1 {
     font-size: 22px;
     color: #fff;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     margin-bottom: 0;
     line-height: 44px;
 }
@@ -387,7 +389,7 @@ header.main_header {
 }
 .available_on .tittle_heading h2 span {
     color: #eb0029;
-    font-family: "ThePretender-ExpSansBoldPress";
+    /* font-family: "ThePretender-ExpSansBoldPress"; */
 }
 
 .certified_crd {
@@ -406,23 +408,24 @@ header.main_header {
 
 .certified_crd_cntnt .tittle_heading h2 span {
     color: #eb0029;
-    font-family: "ThePretender-ExpSansBoldPress";
+    /* font-family: "ThePretender-ExpSansBoldPress"; */
 }
 
 .certified_crd_cntnt .tittle_heading p {
-    font-size: 26px;
+    font-size: 22px;
     color: #716b6d;
-    line-height: 44px;
+    line-height: unset;
     margin-bottom: 44px;
 }
 
 .certified_crd_cntnt .tittle_heading h4 {
     font-size: 33px;
     line-height: 59px;
+
 }
 
 .certified_crd_cntnt .tittle_heading h4 span {
-    font-family: "ThePretender-ExpSansBoldPress";
+    /* font-family: "ThePretender-ExpSansBoldPress"; */
     color: #eb0029;
 }
 
@@ -479,7 +482,7 @@ header.main_header {
 
 .award_winning_txt h2 span {
     color: #eb0029;
-    font-family: "ThePretender-ExpSansBoldPress";
+    /* font-family: "ThePretender-ExpSansBoldPress"; */
 }
 
 .award_winning_txt p {
@@ -526,7 +529,7 @@ header.main_header {
 }
 
 .about_cntnt h3 {
-    font-size: 16px;
+    font-size: 32px;
     color: #eb0029;
     margin-bottom: 12px;
 }
@@ -540,7 +543,7 @@ header.main_header {
 .about_cntnt p {
     font-size: 16px;
     line-height: 32px;
-    margin-bottom: 51px;
+    margin-bottom: 26px;
 }
 
 .taste_the {
@@ -582,7 +585,7 @@ header.main_header {
     color: #0b0708;
     border-bottom: 1px solid #9d9d9d;
     border-radius: 0;
-    font-family: "ThePretender-ExpSansBoldPress";
+    /* font-family: "ThePretender-ExpSansBoldPress"; */
 }
 
 .custm_nav_pills button.nav-link.active {
@@ -620,7 +623,7 @@ ul._service_list li:last-child {
 }
 
 .our_servics_txt h2 {
-    font-size: 24px;
+    font-size: 35px;
     margin-bottom: 5px;
 }
 
@@ -636,10 +639,15 @@ ul._service_list li:last-child {
 
 .order_online .tittle_heading h3 {
     color: #fff;
+    font-size: 56px;
 }
 
 .order_online .tittle_heading h2 {
     color: #fff;
+    font-family: 'Times New Roman Cyr';
+    font-weight: bold;
+    line-height: unset;
+    font-size: 26px;
 }
 
 .order_online_crd {
@@ -660,6 +668,17 @@ ul._service_list li:last-child {
     max-width: 660px;
     margin: 0 auto 46px;
 }
+.best_food .tittle_heading h3 {
+    font-size: 56px;
+}
+.best_food .tittle_heading h2 {
+    font-family: 'Times New Roman Cyr';
+    font-weight: bold;
+    line-height: unset;
+    font-size: 26px;
+}
+
+
 
 .best_food_crd_img img {
     width: 100%;
@@ -676,12 +695,15 @@ ul._service_list li:last-child {
     color: #0b0708;
     margin-bottom: 0;
     text-transform: capitalize;
+    font-family: 'Times New Roman Cyr';
 }
 
 .best_food_txt h2 {
-    font-size: 29px;
+    font-size: 24px;
     color: #eb0029;
     margin-bottom: 0;
+    font-family: 'Times New Roman Cyr';
+
 }
 
 .best_food_txt {
@@ -712,19 +734,35 @@ ul._service_list li:last-child {
 
 .meet_chef_cntnt .tittle_heading h2 {
     margin-bottom: 10px;
+    font-size: 35px;
 }
 
 .meet_chef_cntnt p {
     line-height: 32px;
     margin-bottom: 33px;
 }
+.meet_chef_cntnt .tittle_heading h3{
+    font-size: 56px;
+}
+.meet_chef_cntnt .tittle_heading h2{
+    font-family: 'Times New Roman Cyr';
+    font-weight: bold;
+    line-height: unset;
+    font-size: 26px;
+}
+
 
 .testimonial_sec .tittle_heading h3 {
     color: #fff;
+    font-size: 56px;
 }
 
 .testimonial_sec .tittle_heading h2 {
     color: #fff;
+    font-family: 'Times New Roman Cyr';
+    font-weight: bold;
+    line-height: unset;
+    font-size: 26px;
 }
 
 .testimonial_sec .tittle_heading {
@@ -794,8 +832,8 @@ ul._service_list li:last-child {
 }
 
 .sub_scribe_txt h2 {
-    font-size: 36px;
-    line-height: 43px;
+    font-size: 56px;
+    line-height: 59px;
     margin-bottom: 6px;
 }
 
@@ -828,7 +866,16 @@ ul._service_list li:last-child {
 .contact_sec {
     padding: 90px 0;
 }
-
+.contact_sec .tittle_heading h3{
+    font-size: 56px;
+    display: none;
+}
+.contact_sec .tittle_heading h2{
+    font-size: 56px;
+    color: #eb0029;
+    margin-bottom: 6px;
+    text-transform: capitalize;
+}
 .contact_form .tittle_heading {
     text-align: left;
     margin-bottom: 30px;
@@ -1777,7 +1824,7 @@ img.mfp-img {
 }
 
 .menu_list_inner h3 {
-    font-family: "ThePretender-ExpSansBoldPress";
+    /* font-family: "ThePretender-ExpSansBoldPress"; */
     font-size: 16px;
     font-weight: 400;
 }
@@ -1809,7 +1856,7 @@ img.mfp-img {
 
 .menu_main_box .best_food_txt h2 {
     color: #eb0029;
-    font-family: "ThePretender-ExpSansBoldPress";
+    /* font-family: "ThePretender-ExpSansBoldPress"; */
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -2206,6 +2253,7 @@ form.contact_form a {
     background: #d90d0d;
     color: #fff;
     border: none;
+    margin-left: 4px;
 }
 
 .select_location option {
@@ -2789,7 +2837,7 @@ a.qty-plus.plus.qty-count.qty-count--add.update-qty {
 }
 
 .menu_list_inner1 h3 {
-    font-family: "ThePretender-ExpSansBoldPress";
+    /* font-family: "ThePretender-ExpSansBoldPress"; */
     font-size: 16px;
     font-weight: 400;
 }
@@ -3148,7 +3196,7 @@ a.checkout_link_guest {
 }
 
 .my-account-content p:first-child {
-    font-family: "ThePretender-ExpSansBoldPress";
+    /* font-family: "ThePretender-ExpSansBoldPress"; */
     font-size: 20px;
 }
 
@@ -3305,7 +3353,7 @@ section.menu_main1 .cusstom_input input,
 .product_title h1 {
     text-align: left;
     font-weight: 600;
-    font-family: "ThePretender-ExpSansBoldPress";
+    /* font-family: "ThePretender-ExpSansBoldPress"; */
 }
 
 .product_discription {
@@ -3415,7 +3463,7 @@ ul {
 }
 
 li {
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 
 #delivery-options {
@@ -3513,6 +3561,10 @@ form.order_cancel {
 }
 .social_icons_footer ul li {
     display: inline-block;
+    margin: 0 4px;
+}
+.social_icons_footer ul li a {
+    display: inline-block;
 }
 .mce_inline_error {
     color: red;
@@ -3550,9 +3602,32 @@ div#mmce-error-response {
     position: absolute;
     transform: translateY(66%);
     margin: 0 0 0 -32px;
-
+}
 .payment-metho-radio li .radio-item_1 input:checked + label {
     background: #eb0029;
     border: 1px solid hsl(0deg 0% 95%);
     color: #fff !important;
+}
+
+
+.taste_the .tittle_heading h3{
+    font-size: 56px;
+}
+.taste_the .tittle_heading h2{
+    font-family: 'Times New Roman Cyr';
+    font-weight: bold;
+    line-height: unset;
+    font-size: 26px;
+}
+.our_servics .tittle_heading h3{
+    font-size: 56px;
+}
+.our_servics .tittle_heading h2{
+    font-family: 'Times New Roman Cyr';
+    font-weight: bold;
+    line-height: unset;
+    font-size: 26px;
+}
+.about_banner_section .home-slider-content h1 {
+    font-size: 56px;
 }
