--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -1826,6 +1826,7 @@ img.mfp-img {
 .menu_list_inner h3 {
     /* font-family: "ThePretender-ExpSansBoldPress"; */
     font-size: 16px;
+    font-family: 'Times New Roman Cyr';
     font-weight: 400;
 }
 
