--- a/public/backend/css/app.css
+++ b/public/backend/css/app.css
@@ -161,3 +161,19 @@ input[type="password"]::-ms-reveal {
     font-weight: 700;
     position: relative;
 }
+.generate_coupan_code {
+    display: inline-block;
+    text-decoration: none;
+    font-size: 13px;
+    line-height: 2.15384615;
+    min-height: 30px;
+    margin: 0;
+    padding: 0 10px;
+    cursor: pointer;
+    border-width: 1px;
+    border-style: solid;
+    -webkit-appearance: none;
+    border-radius: 3px;
+    white-space: nowrap;
+    box-sizing: border-box;
+}
