--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -3821,3 +3821,17 @@ h3.best-of-listing-box-title {
 .sub_scribe input#mce-EMAIL {
   border: 1px solid #573d2442 !important;
 }
+ div#social-links {
+                margin: 0 auto;
+            }
+            div#social-links ul li {
+                display: inline-block;
+            }
+            div#social-links ul li a {
+
+                border: 1px solid #ccc;
+                margin: 1px;
+                font-size: 30px;
+                color: #222;
+                background-color: #ccc;
+            }
